--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "piroca",
-  "version": "0.4.0",
-  "description": "PaaS - Piroca as a Service (get Brazilian equivalents for d*ck)",
+  "version": "0.5.0",
+  "description": "PaaS - Piroca as a Service (get Brazilian equivalents for :eggplant:)",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -28,17 +28,21 @@
     "bin",
     "word",
     "words",
+    "badwords",
     "list",
     "array",
     "json",
     "random",
     "rand",
     "prompt",
-    "dick",
     "piroca"
   ],
   "dependencies": {
+    "alpha-sort": "^1.0.2",
+    "array-uniq": "^1.0.2",
+    "lodash": "^4.6.1",
     "meow": "^3.3.0",
+    "parse-json": "^2.2.0",
     "unique-random-array": "^1.0.0"
   },
   "devDependencies": {
